--- a/nginx/nginx2.conf
+++ b/nginx/nginx2.conf
@@ -1,17 +1,17 @@
-serveur {
-    écouter 80 ;
-    nom_serveur _ ;
-    racine /var/www/html/public ;
-    index index.php index.html ;
+server {
+    listen 80;
+    server_name _;
+    root /var/www/html/public;
+    index index.php index.html;
 
-    emplacement / {
-        try_files $uri $uri/ /index.php?$query_string ;
+    location / {
+        try_files $uri $uri/ /index.php?$query_string;
     }
 
-    emplacement ~ \.php$ {
-        inclure fastcgi_params ;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name ;
-        fastcgi_pass php2:9000 ;
-        fastcgi_index index.php ;
+    location ~ \.php$ {
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_pass php2:9000;
+        fastcgi_index index.php;
     }
- }
+}
