--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -1,15 +1,15 @@
-# Node 12 (pour npm ci / npm run build)
+# Node 12 (consigne)
 FROM node:12-alpine AS node12
 
-# PHP-FPM
-FROM php:8.3-fpm-alpine
+# PHP-FPM **8.1** (compatible avec tes deps)
+FROM php:8.1-fpm-alpine
 
 RUN docker-php-ext-install pdo_mysql
 
 # Composer
 COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
 
-# Node 12 dans l'image PHP
+# Node 12 dans l'image (pour npm si besoin)
 COPY --from=node12 /usr/local/bin/node /usr/local/bin/node
 COPY --from=node12 /usr/local/lib/node_modules /usr/local/lib/node_modules
 RUN ln -s /usr/local/lib/node_modules/npm/bin/npm-cli.js /usr/local/bin/npm \
@@ -17,9 +17,7 @@ RUN ln -s /usr/local/lib/node_modules/npm/bin/npm-cli.js /usr/local/bin/npm \
 
 WORKDIR /var/www/html
 
-# Script d'init
 COPY start.sh /usr/local/bin/start.sh
 RUN sed -i 's/\r$//' /usr/local/bin/start.sh && chmod +x /usr/local/bin/start.sh
+
 CMD ["start.sh"]
-
-
